# toolbox

./: .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  README_deprecated.md  client.py  index.html  mcp_server.dockerfile  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.claude/commands/: create_issue.md  update_issue.md
.github/workflows/: docs.yml  pre-commit.yml  pytest.yml
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/assets/stylesheets/: extra.css
0.3.1/features/notifications/: index.html
0.3.1/features/triggers/: index.html
0.3.1/getting-started/installation/: index.html
0.3.1/getting-started/quick-start/: index.html
0.3.1/overrides/: main.html
0.3.1/search/: search_index.json
0.3.1/use-cases/slack/: index.html
agentic_syftbox/: server.py
agentic_syftbox/agentic_syftbox.egg-info/: PKG-INFO  SOURCES.txt
data/screenpipe/: db.sqlite  db2.sqlite
dev/: 404.html  index.html  sitemap.xml
dev/features/notifications/: index.html
dev/features/triggers/: index.html
dev/getting-started/installation/: index.html
dev/getting-started/quick-start/: index.html
dev/search/: search_index.json
dev/use-cases/slack/: index.html
dev/use-cases/use_cases/: index.html
docs/: index.md  triggers.md
docs/assets/stylesheets/: extra.css
docs/features/: notifications.md  triggers.md
docs/getting-started/: installation.md  quick-start.md
docs/overrides/: main.html
docs/use-cases/: slack.md  use_cases.md
examples/: arxiv_downloader.py  browseruse.py  hf_daily_papers_downloader.py  home_latest_timeline.json  home_latest_timeline_2.json  parse_tweets.py  scrape_scheduler_ap.py  scrape_scheduler_stdlib.py  search_github_trigger.py  todo_tracker.py  twitter_scrape_wiith_cookie.py
examples/data/: home_latest_timeline_20250923_121939.json  home_latest_timeline_20250923_121942.json  home_latest_timeline_20250923_121959.json  home_latest_timeline_20250923_122006.json  home_latest_timeline_20250923_122016.json  home_latest_timeline_20250923_122021.json
features/notifications/: index.html
features/triggers/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
notebooks/: cli.ipynb  discord_exploration.ipynb  screenpipe_gather_meeting_transcriptions.ipynb  screenpipe_meetings.ipynb  syftrpc_communication.ipynb  transcriber.ipynb
other_packages/whatsapp/scripts/notebooks/: teset_whatsapp_db.ipynb
other_packages/whisper/: README.md  pyproject.toml
other_packages/whisper/notebooks/: test.ipynb
other_packages/whisper/scripts/: test_transcription_request.py
other_packages/whisper/whisper/: app.py  fastapi_server.py  models.py  settings.py  whisper_model.py
scripts/: add_mcps_claude_desktop_config.py  client.py
search/: search_index.json
tests/: test_triggers_e2e.py
tests/assets/: trigger_script_with_toolbox_events.py
use-cases/slack/: index.html
