[project]
name = "toolbox_mono"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "syft_toolbox",
    "notes_mcp",
    "syftbox_queryengine",
    "slack_mcp",
    "whatsapp_desktop_mcp",
    "obsidian_mcp",
    "pdf_mcp",
    "toolbox_events",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
syft_toolbox = { workspace = true }
notes_mcp = { workspace = true }
slack_mcp = { workspace = true }
whatsapp_desktop_mcp = { workspace = true }
syftbox_queryengine = { workspace = true }
pdf_mcp = { workspace = true }
obsidian_mcp = { workspace = true }
toolbox_events = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "mkdocs-material[imaging]>=9.6.18",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.9",
]
