[project]
dependencies = [
    "accelerate==1.8.1",
    "moviepy==2.2.1",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "transformers==4.53.0",
    "pydantic",
    "pydantic-settings==2.9.0",
    "fastapi==0.115.14",
    "pydantic==2.11.7",
    "uvicorn==0.35.0"
]

name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pre-commit>=4.1.0", "pytest-xdist>=3.6.1", "pytest>=8.3.4"]

[dependency-groups]
dev = ["pytest-xdist>=3.6.1", "pytest>=8.3.4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disable_error_code = ["import-untyped"]

[tool.hatch.metadata]
allow-direct-references = true
